# plotlars

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  justfile
.github/workflows/: rust.yml
crates/plotlars/: Cargo.toml
crates/plotlars-core/: Cargo.toml
crates/plotlars-core/src/: data.rs  lib.rs  plot.rs  policy.rs
crates/plotlars-core/src/components/: arrangement.rs  axis.rs  bar_mode.rs  cell.rs  color.rs  colorbar.rs  coloring.rs  dimensions.rs  direction.rs  exponent.rs  facet.rs  fill.rs  header.rs  intensity.rs  legend.rs  lighting.rs  line.rs  mod.rs  mode.rs  orientation.rs  palette.rs  shape.rs  text.rs  tick.rs
crates/plotlars-core/src/faceting/: mod.rs
crates/plotlars-core/src/io/: csv.rs  error.rs  excel.rs  json.rs  mod.rs  parquet.rs
crates/plotlars-core/src/ir/: data.rs  facet.rs  layout.rs  line.rs  marker.rs  mod.rs  trace.rs
crates/plotlars-core/src/plots/: array2dplot.rs  barplot.rs  boxplot.rs  candlestick.rs  contourplot.rs  density_mapbox.rs  heatmap.rs  histogram.rs  image.rs  lineplot.rs  mesh3d.rs  mod.rs  ohlc.rs  piechart.rs  sankeydiagram.rs  scatter3dplot.rs  scattergeo.rs  scattermap.rs  scatterplot.rs  scatterpolar.rs  surfaceplot.rs  table.rs  timeseriesplot.rs
crates/plotlars-plotly/: Cargo.toml
crates/plotlars-plotly/src/: ext.rs  lib.rs
crates/plotlars-plotly/src/converters/: components.rs  layout.rs  line.rs  marker.rs  mod.rs  trace.rs
crates/plotlars-plotly/src/faceting/: mod.rs
crates/plotlars-plotly/src/render/: mod.rs
crates/plotlars-plotly/src/subplot_grid/: custom_legend.rs  irregular.rs  mod.rs  regular.rs  shared.rs
crates/plotlars-plotters/: Cargo.toml
crates/plotlars-plotters/src/: ext.rs  lib.rs  orchestrator.rs
crates/plotlars-plotters/src/converters/: components.rs  layout.rs  mod.rs  trace.rs
crates/plotlars-plotters/src/render/: axis.rs  bar.rs  boxplot.rs  heatmap.rs  legend.rs  mod.rs  numeric.rs  title.rs
crates/plotlars/examples/: barplot.rs  dimensions.rs  export_image.rs  faceting.rs  heatmap.rs  image.rs  ohlc.rs  plotly_barplot.rs  plotly_boxplot.rs  plotly_candlestick.rs  plotly_contourplot.rs  plotly_density_mapbox.rs  plotly_dimensions.rs  plotly_export_image.rs  plotly_faceting.rs  plotly_heatmap.rs  plotly_histogram.rs  plotly_lineplot.rs  plotly_mesh3d.rs  plotly_ohlc.rs  plotly_piechart.rs  plotly_sankeydiagram.rs  plotly_scatter3dplot.rs  plotly_scattergeo.rs  plotly_scattermap.rs  plotly_scatterplot.rs  plotly_scatterpolar.rs  plotly_subplot_grid.rs  plotly_surfaceplot.rs  plotly_table.rs  plotly_timeseriesplot.rs  plotters_barplot.rs  plotters_boxplot.rs  plotters_candlestick.rs  plotters_heatmap.rs  plotters_histogram.rs  plotters_lineplot.rs  plotters_scatterplot.rs  plotters_showcase.rs  plotters_timeseriesplot.rs  (+5 more)
crates/plotlars/src/: lib.rs
data/: animal_statistics.csv  cities.csv  contour_surface.csv  debilt_2023_temps.csv  employee_data.csv  energy_transition.csv  financial_timeseries.csv  flight_path.csv  heatmap.csv  industry_region.csv  product_comparison_polar.csv  regional_sales.csv  revenue_and_cost.csv  sales.csv  sankey_flow.csv  stock_prices.csv  temperature_seasonal.csv  us_cities_regions.csv  us_city_density.csv  wind_patterns.csv  world_cities.csv
examples/: array2dplot.rs  barplot.rs  boxplot.rs  boxplot_facet.rs  candlestick.rs  contourplot.rs  density_mapbox.rs  dimensions.rs  export_image.rs  faceting.rs  heatmap.rs  histogram.rs  image.rs  lineplot.rs  lineplot_facet.rs  mesh3d.rs  ohlc.rs  piechart.rs  sankeydiagram.rs  scatter3dplot.rs  scattergeo.rs  scattermap.rs  scatterplot.rs  scatterplot3d.rs  scatterplot_facet.rs  scatterpolar.rs  subplot_grid.rs  subplot_grid_mixed.rs  surfaceplot.rs  table.rs  timeseriesplot.rs  timeseriesplot2.rs
scripts/: snapshot.sh
src/: lib.rs
src/aesthetics/: line.rs  mark.rs  mod.rs  orientation.rs
src/axis/: mod.rs
src/colors/: mod.rs
src/common/: layout.rs  line.rs  mark.rs  mod.rs  plot.rs  polar.rs
src/components/: arrangement.rs  axis.rs  bar_mode.rs  cell.rs  color.rs  colorbar.rs  coloring.rs  contours.rs  dimensions.rs  direction.rs  exponent.rs  facet.rs  fill.rs  header.rs  intensity.rs  intensity_mode.rs  legend.rs  lighting.rs  line.rs  mod.rs  mode.rs  orientation.rs  palette.rs  shape.rs  text.rs  tick.rs
src/faceting/: mod.rs
src/ir/: data.rs  facet.rs  layout.rs  line.rs  marker.rs  mod.rs  trace.rs
src/legend/: mod.rs
src/legends/: colorbar.rs  legend.rs  mod.rs
src/macros/: marker.rs  mod.rs
src/plotly_conversions/: components.rs  layout.rs  line.rs  marker.rs  mod.rs  trace.rs
src/plots/: array2dplot.rs  barplot.rs  boxplot.rs  candlestick.rs  contourplot.rs  density_mapbox.rs  heatmap.rs  histogram.rs  image.rs  lineplot.rs  mesh3d.rs  mod.rs  ohlc.rs  piechart.rs  sankeydiagram.rs  scatter3dplot.rs  scattergeo.rs  scattermap.rs  scatterplot.rs  scatterpolar.rs  surfaceplot.rs  table.rs  template.rs  timeseriesplot.rs
src/plots/subplot/: irregular.rs  mod.rs  regular.rs  shared.rs
src/plots/subplot_grid/: custom_legend.rs  irregular.rs  mod.rs  regular.rs  shared.rs
src/shapes/: mod.rs
src/texts/: mod.rs
src/traces/: barplot.rs  boxplot.rs  heatmap.rs  histogram.rs  lineplot.rs  mod.rs  scatterplot.rs  timeseriesplot.rs
src/traits/: layout.rs  mod.rs  plot.rs  trace.rs
tests/: conftest.py  readme_validation.rs  test_readme.py
