[package]
name = "plotlars"
version = "0.11.3"
authors = ["Alberto Cebada Aleu <contact@albertocebada.com>"]
edition = "2021"
rust-version = "1.86.0"
description = "Plotlars is a Rust library designed to facilitate the integration between the Polars data analysis library and visualization libraries."
documentation = "https://docs.rs/plotlars/latest/plotlars/"
readme = "README.md"
homepage = "https://github.com/alceal/plotlars"
repository = "https://github.com/alceal/plotlars"
license = "MIT"
keywords = ["chart", "plot", "plotly", "polars", "visualization"]
categories = ["visualization"]

[lib]
doctest = false

[dependencies]
bon = "3.8.1"
image = "0.25.9"
indexmap = "2.12.1"
ordered-float = "5.1.0"
plotly = "0.13.5"
polars = { version = "0.52.0", features = ["lazy", "dtype-categorical", "timezones"] }
serde = "1.0.228"
serde_json = "1.0.145"

[features]
export-chrome = ["plotly/static_export_chromedriver"]
export-firefox = ["plotly/static_export_geckodriver"]
export-download = ["plotly/static_export_wd_download"]
export-default = ["plotly/static_export_default"]
