[workspace]
members = [
    "crates/plotlars-core",
    "crates/plotlars-plotly",
    "crates/plotlars-plotters",
    "crates/plotlars",
]
resolver = "2"

[workspace.package]
version = "0.12.1"
edition = "2021"
rust-version = "1.86.0"
license = "MIT"
repository = "https://github.com/alceal/plotlars"
authors = ["Alberto Cebada Aleu <contact@albertocebada.com>"]

[workspace.dependencies]
bon = "3.9.1"
image = "0.25.10"
indexmap = "2.13.0"
ordered-float = "5.1.0"
polars = { version = "0.53.0", features = ["lazy", "dtype-categorical", "timezones", "parquet"] }
serde = "1.0.228"
serde_json = "1.0.149"
plotly = "0.14.1"
plotters = "0.3"
