[package]
name = "plotlars-core"
version = "0.12.0"
edition = "2021"
rust-version = "1.86.0"
publish = false
description = "Core types and traits for plotlars"
license = "MIT"

[lib]
doctest = false

[dependencies]
bon = "3.9.1"
image = "0.25.6"
indexmap = "2.13.0"
ordered-float = "5.1.0"
polars = { version = "0.53.0", features = ["lazy", "dtype-categorical", "timezones"] }
serde = "1.0.228"
serde_json = "1.0.149"
