[package]
name = "plotlars-plotly"
version = "0.12.0"
edition = "2021"
rust-version = "1.86.0"
publish = false
description = "Plotly backend for plotlars"
license = "MIT"

[dependencies]
plotlars-core = { path = "../plotlars-core" }
bon = "3.9.1"
image = "0.25.10"
plotly = "0.14.1"
polars = { version = "0.53.0", features = ["lazy"] }
serde = "1.0.228"
serde_json = "1.0.149"

[features]
export-chrome = ["plotly/static_export_chromedriver"]
export-firefox = ["plotly/static_export_geckodriver"]
export-download = ["plotly/static_export_wd_download"]
export-default = ["plotly/static_export_default"]
